useScroll and useTransform hooks

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -13,6 +13,7 @@
     bottom: 0;
     width: 400px;
     background: white;
+    z-index: 999;
 
     .links {
       position: absolute;
@@ -40,6 +41,7 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    z-index: 999;
 
     svg {
       margin-top: 8px;
