--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -35,8 +35,14 @@
           background-color: transparent;
           color: white;
           margin-right: 20px;
-          font-weight: 400;
+          font-weight: 500;
           cursor: pointer;
+          z-index: 1;
+        }
+        button:hover {
+          background-color: white;
+          color: rebeccapurple;
+          z-index: 1;
         }
       }
 
