--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -65,7 +65,11 @@
           border-radius: 10px;
           padding: 10px;
           width: 200px;
+          font-weight: 700;
           cursor: pointer;
+        }
+        button:hover {
+          opacity: 0.7;
         }
       }
     }
