--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -56,7 +56,11 @@
         background-color: orange;
         border: none;
         font-size: 24px;
+        font-weight: 500;
         cursor: pointer;
+      }
+      button:hover {
+        opacity: 0.7;
       }
     }
   }
@@ -78,7 +82,12 @@
         padding: 10px;
         background-color: orange;
         border: none;
+        font-weight: 500;
+        border-radius: 2px;
         cursor: pointer;
+      }
+      button:hover {
+        opacity: 0.7;
       }
     }
   }
