--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,9 +1,11 @@
+@import "../../app.scss";
+
 .services {
   background: linear-gradient(180deg, #0c0c1d, #111132);
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  padding-bottom: 20px;
 
   .textContainer {
     flex: 1;
@@ -12,17 +14,32 @@
     align-items: center;
     gap: 20px;
 
+    @include mobile {
+      align-self: center;
+      text-align: center;
+      flex-direction: column;
+      padding-top: 100px;
+    }
+
     p {
       font-weight: 200;
       font-size: 20px;
       color: gray;
       text-align: right;
+
+      @include mobile {
+        text-align: center;
+      }
     }
 
     hr {
       width: 500px;
       border: none;
       border-top: 0.5px solid gray;
+
+      @include mobile {
+        width: 300px;
+      }
     }
   }
 
@@ -32,21 +49,40 @@
     flex-direction: column;
     align-items: center;
 
+    @include mobile {
+      width: 100%;
+    }
+
     .title {
       display: flex;
       align-items: center;
       gap: 50px;
+
+      @include mobile {
+        flex-direction: column;
+        text-align: center;
+        gap: 20px;
+      }
 
       img {
         width: 300px;
         height: 100px;
         border-radius: 50px;
         object-fit: cover;
+
+        @include mobile {
+          width: 200px;
+          height: 50px;
+        }
       }
 
       h1 {
         font-size: 96px;
         font-weight: 100;
+
+        @include mobile {
+          font-size: 36px;
+        }
       }
 
       button {
@@ -58,6 +94,12 @@
         font-size: 24px;
         font-weight: 500;
         cursor: pointer;
+
+        @include mobile {
+          width: 200px;
+          height: 50px;
+          font-size: 16px;
+        }
       }
       button:hover {
         opacity: 0.7;
@@ -70,13 +112,33 @@
     display: flex;
     max-width: 1366px;
     margin: auto;
+    gap: 10px;
+
+    @include mobile {
+      display: grid;
+      grid-template-columns: 49% 49%;
+      width: 90%;
+    }
 
     .box {
-      padding: 50px;
+      padding: 40px;
       border: 0.5px solid gray;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      @include mobile {
+        align-items: center;
+        gap: 10px;
+        padding: 12px;
+        font-size: 14px;
+      }
+
+      p {
+        @include mobile {
+          display: none;
+        }
+      }
 
       button {
         padding: 10px;
@@ -85,6 +147,14 @@
         font-weight: 500;
         border-radius: 2px;
         cursor: pointer;
+
+        @include mobile {
+          background-color: transparent;
+          border: 1px solid orange;
+          border-radius: 5px;
+          color: orange;
+          width: 100%;
+        }
       }
       button:hover {
         opacity: 0.7;
