--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,10 +1,18 @@
+@import "../../app.scss";
+
 .contact {
   height: 100%;
   max-width: 1366px;
   margin: auto;
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 40px;
+
+  @include mobile {
+    width: 100%;
+    padding: 10px;
+    flex-direction: column;
+  }
 
   .textContainer {
     flex: 1;
@@ -12,9 +20,20 @@
     flex-direction: column;
     gap: 40px;
 
+    @include mobile {
+      gap: 10px;
+      text-align: center;
+      align-items: center;
+      margin-top: 70px;
+    }
+
     h1 {
       font-size: 100px;
       line-height: 88px;
+
+      @include mobile {
+        font-size: 36px;
+      }
     }
 
     span {
@@ -25,12 +44,26 @@
 
   .formContainer {
     flex: 1;
+    position: relative;
+    width: 100%;
+
+    @include mobile {
+      padding: 0 30px 30px;
+    }
 
     .phoneSvg {
       stroke: orange;
       position: absolute;
       margin: auto;
       z-index: -1;
+      text-align: center;
+
+      svg {
+        @include mobile {
+          width: 90%;
+          height: 90%;
+        }
+      }
     }
 
     form {
@@ -45,6 +78,10 @@
         border: 1px solid white;
         color: white;
         border-radius: 5px;
+
+        @include mobile {
+          padding: 10px;
+        }
       }
 
       button {
@@ -54,6 +91,10 @@
         background-color: orange;
         font-weight: 700;
         cursor: pointer;
+
+        @include mobile {
+          padding: 10px;
+        }
       }
       button:hover {
         opacity: 0.7;
