--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .hero {
   height: calc(100vh - 100px);
   background: linear-gradient(180deg, #0c0c1d, #111132);
@@ -9,6 +11,10 @@
     height: 100%;
     margin: auto;
 
+    @include mobile {
+      padding: 0 4px;
+    }
+
     .textContainer {
       width: 50%;
       height: 100%;
@@ -16,6 +22,14 @@
       flex-direction: column;
       justify-content: center;
       gap: 40px;
+
+      @include mobile {
+        width: 100%;
+        height: 50%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+      }
 
       h2 {
         font-size: 30px;
@@ -25,6 +39,10 @@
 
       h1 {
         font-size: 88px;
+
+        @include mobile {
+          font-size: 36px;
+        }
       }
 
       .buttons {
@@ -37,17 +55,23 @@
           margin-right: 20px;
           font-weight: 500;
           cursor: pointer;
-          z-index: 1000;
+          z-index: 998;
         }
         button:hover {
           background-color: white;
           color: rebeccapurple;
-          z-index: 1000;
+          z-index: 998;
         }
       }
 
       img {
         width: 50px;
+      }
+    }
+
+    .scrollButton {
+      @include mobile {
+        display: none;
       }
     }
   }
@@ -60,6 +84,10 @@
     color: #ffffff09;
     width: 50%;
     font-weight: bold;
+
+    @include mobile {
+      font-size: 100px;
+    }
   }
 
   .imageContainer {
@@ -67,5 +95,18 @@
     position: absolute;
     top: 0;
     right: 0;
+
+    @include mobile {
+      width: 100%;
+      height: 50%;
+      top: unset;
+      bottom: 0;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 }
