--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -15,6 +17,10 @@
     background: white;
     z-index: 999;
 
+    @include mobile {
+      width: 50%;
+    }
+
     .links {
       position: absolute;
       width: 100%;
@@ -27,6 +33,10 @@
 
       a {
         font-size: 40px;
+
+        @include mobile {
+          font-size: 20px;
+        }
       }
     }
   }
