--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -13,6 +13,9 @@
     padding: 10px;
     flex-direction: column;
   }
+  @include laptop {
+    max-width: 1320px;
+  }
 
   .textContainer {
     flex: 1;
