--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -15,6 +15,9 @@
       justify-content: flex-end;
       padding: 20px;
     }
+    @include laptop {
+      max-width: 1320px;
+    }
 
     span {
       font-weight: bold;
