--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
   color: black;
 
   .bg {
@@ -13,8 +12,8 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 400px;
-    background: white;
+    width: 300px;
+    background: whitesmoke;
     z-index: 999;
 
     @include mobile {
@@ -46,16 +45,12 @@
     height: 50px;
     border-radius: 50%;
     position: fixed;
-    top: 25px;
+    top: 30px;
     left: 25px;
     background-color: transparent;
     border: none;
     cursor: pointer;
     z-index: 999;
-
-    svg {
-      margin-top: 8px;
-    }
   }
   button:hover {
     opacity: 0.7;
